# QuantTradingSystem

./: .coverage  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  QTS-PROJECT-SUMMARY.md  README.md  dashboard.Dockerfile  docker-compose.test.yml  docker-compose.yml  handoff-sprint3.md  overview.md  pyproject.toml  ruff.toml  test-coverage-overview.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  ci.yml  dashboard-build.yml  security-scan.yml  test-reusable.yml  test.yml
ai-scheduler/: .coverage  Dockerfile  coverage.json  main.py  middleware.py.bak  pytest.ini  requirements.txt
ai-scheduler/api/: __init__.py  schedule.py  ws_scheduler.py
ai-scheduler/core/: __init__.py  config.py
ai-scheduler/services/: feishu_alert.py  health_monitor.py  llm_client.py  strategy_client.py  task_scheduler.py
ai-scheduler/tests/: conftest.py  test_ai_scheduler.py  test_config.py  test_feishu_alert.py  test_health_monitor.py  test_llm_client.py  test_main.py  test_schedule_api.py  test_strategy_client.py  test_task_scheduler.py  test_ws_scheduler.py
ai/memory-bank/: README.md
config/: redis.conf
dashboard/: Dockerfile  account.html  alerts.html  api-docs.html  app.js  app.spa.js  backtest.html  build.sh  design-tokens.css  index.html  nginx.conf  orders.html  overview.md  review-analysis.html  stock-selection.html  strategies.html  style.css  sw.js  trade-analysis.html
dashboard/js/: account.js  alerts.js  api-docs.js  backtest.js  index-particle.js  index-ws.js  orders.js  review-analysis.js  stock-selection.js  strategies.js  trade-analysis.js
data/: fetch_data.py
docs/: ARCHITECTURE.md  RUNBOOK.md  SECURITY.md  init.sql  integration-test-report-2026-06-09.md  production-readiness.md
docs/adr/: 001-config-management.md  001-microservices-architecture.md  002-fastapi-celery-choice.md  003-miniqmt-selection.md  004-connector-staged-integration.md  005-unified-dependency-management.md  006-dist-build-and-ci-gate.md  README.md
docs/api/: README.md  ai-scheduler.json  execution-service.json  index.html  strategy-service.json
docs/incident-response/: strategy-service-crash-20260611.md
execution-service/: .coverage  .dockerignore  Dockerfile  main.py  pytest.ini  requirements.txt  shared
execution-service/api/: __init__.py  orders.py  positions.py  risk.py  ws_execution.py
execution-service/core/: __init__.py  config.py  constants.py  exceptions.py
execution-service/models/: database.py
execution-service/scripts/: daily_risk_monitor.py  feishu_daily_report.py
execution-service/services/: __init__.py  advanced_risk_rules.py  alert_utils.py  feishu_alert.py  market_data_provider.py  miniqmt_connector.py  models.py  order_admin.py  order_manager.py  order_stop.py  order_validator.py  position_manager.py  risk_controller.py
execution-service/tests/: conftest.py  test_api_orders.py  test_api_positions.py  test_api_risk.py  test_config.py  test_database.py  test_execution.py  test_execution_feishu_alert.py  test_miniqmt_connector.py  test_order_admin.py  test_order_validator.py  test_risk_controller.py  test_ws_execution.py
helm/quant-trading/: .helmignore  Chart.yaml  README.md  values.yaml
k8s/: ai-scheduler.yaml  configmap.yaml  dashboard.yaml  deploy.sh  elasticsearch.yaml  execution-service.yaml  grafana.yaml  ingress.yaml  kibana.yaml  logstash.yaml  namespace.yaml  network-policy.yaml  nginx-dashboard.conf  pdb.yaml  postgres.yaml  prometheus.yaml  questdb.yaml  rabbitmq.yaml  rbac.yaml  redis.yaml  resource-quota.yaml  secrets.yaml  secrets.yaml.example  strategy-service.yaml  validate_k8s.py
monitoring/: Dockerfile.alertmanager-feishu  alert_rules.yml  alertmanager.yml  alertmanager_feishu_adapter.py  nginx-local.conf  nginx.conf  prometheus.yml  sli_recording_rules.yml  slo_alerts.yml  slo_rules.yml
output/: vpb-strategy-overview.md  vpb_v2.2_optimization_overview.md
qmt/: SETUP.md  qmt_bridge_server.py  qmt_client.py
reports/: chaos_report.json  chaos_report.md  multi_strategy_report.html  multi_strategy_report.json  tech_stock_full_report.html  tech_stock_full_report.json
scripts/: backup.sh  chaos-test.sh  chaos_test.py  check-commit-msg.py  fetch_data.py  fetch_data_host.sh  fetch_kline_tencent.py  generate_openapi_specs.py  load_test.js  multi_strategy_backtest.py  tech_stock_full_backtest.py  vpb_exit_comparison.py  vpb_final_recommendation.py  vpb_optimized_verification.py
shared/: __init__.py  astock_code_name.json  auth.py  exceptions.py  graceful_shutdown.py  health.py  logging_config.py  metrics.py  middleware.py  quote_provider.py  rate_limiter.py  redis_client.py  resilience.py  risk_config.py  stock_name.py  structured_log.py  ws_protocol.py
shared/claw_data/: portfolio.json  watchlist.json
shared/quote_provider/: __init__.py  akshare.py  base.py  factory.py  tdx.py  tushare.py
shared/tests/: test_auth.py  test_exceptions.py  test_graceful_shutdown.py  test_health.py  test_logging_config.py  test_metrics.py  test_middleware.py  test_quote_provider_factory.py  test_rate_limiter.py  test_redis_client.py  test_risk_config.py  test_structured_log.py  test_ws_protocol.py
strategy-service/: .coverage  Dockerfile  STOCK_INSIGHT_INTEGRATION.md  alembic.ini  main.py  pytest.ini  requirements.txt  test_simple.py  test_stock_insight.py
strategy-service/.learnings/: LEARNINGS.md
strategy-service/alembic/: env.py
strategy-service/api/: __init__.py  account.py  ai.py  alerts.py  backtest.py  backtest_v2.py  config.py  execution.py  scheduler.py  signal.py  stock.py  stock_insight.py  strategies.py  trades.py  ws_strategy.py
strategy-service/core/: __init__.py  cache.py  config.py
strategy-service/models/: __init__.py  database.py  enums.py  migration.py  models.py  strategy.py
strategy-service/output/: bt_combo_000725_SZ.html  bt_combo_002049_SZ.html  bt_combo_002601_SZ.html  bt_combo_600206_SH.html  (+15 more)
tests/: conftest.py  test_e2e.py  test_feishu_alerts.py  test_resilience.py  test_risk_controller.py
(+222 files in other folders)
