[project]
name = "quant-trading-system"
version = "0.2.0"
description = "A股超短线量化交易系统 — 微服务 + 多智能体 AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "QuantTradingSystem Team" },
]

[project.optional-dependencies]
# Strategy Service
strategy = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.34.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "asyncpg>=0.30.0,<1.0",
    "redis>=5.2.0,<6.0",
    "celery>=5.4.0,<6.0",
    "pandas>=2.2.0,<3.0",
    "numpy>=2.0.0,<3.0",
    "TA-Lib>=0.6.0",
    "pandas-ta>=0.3.14b",
    "akshare>=1.15.0,<2.0",
    "tushare>=1.4.0,<2.0",
    "scikit-learn>=1.6.0,<2.0",
    "pydantic>=2.10.0,<3.0",
    "httpx>=0.28.0,<1.0",
]

# Execution Service
execution = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aio-pika>=9.5.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
]

# AI Scheduler
ai-scheduler = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "redis>=5.2.0",
]

# Monitoring
monitoring = [
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    "python-json-logger>=3.2.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
]

# Shared utilities across all services
shared = [
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
]

# Development
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.25.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.28.0",
    "coverage[toml]>=7.6.0",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
    "bandit[toml]>=1.8.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.32.0",
]

[tool.ruff]
extend = "ruff.toml"

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = [
    "strategy-service/tests",
    "execution-service/tests",
    "ai-scheduler/tests",
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--durations=10",
]

[tool.coverage.run]
source = [
    "strategy-service",
    "execution-service",
    "ai-scheduler",
]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
fail_under = 80
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B105", "B603"]
# B101: assert — used in tests
# B105: hardcoded password strings — handled by K8s Secrets
# B603: subprocess without shell — deploy.sh uses it safely

[tool.ruff.lint]
extend-ignore = [
    "S105",  # Possible hardcoded password — handled by K8s Secrets
]
