[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading-system"
version = "0.2.0"
description = "A股超短线量化交易系统 — 微服务 + 多智能体 AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "QuantTradingSystem Team" },
]

[project.optional-dependencies]
# ═══════════════════════════════════════════════════
# 统一依赖管理（2026-06-19）
# 所有子目录的 requirements.txt 已废弃，全部以此为准。
# 安装方式: pip install -e ".[strategy,shared,dev]"
# ═══════════════════════════════════════════════════

# Strategy Service — 回测引擎 + AI 策略 + 信号
strategy = [
    # Web 框架
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.34.0,<1.0",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.7.0",
    # 数据库
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "asyncpg>=0.30.0,<1.0",
    "redis>=5.2.0,<6.0",
    "psycopg2-binary>=2.9.9",
    "pymongo>=4.6.0",
    # 数据获取
    "pandas>=2.2.0,<3.0",
    "numpy>=2.0.0,<3.0",
    "akshare>=1.15.0,<2.0",
    "tushare>=1.4.0,<2.0",
    "requests>=2.31.0",
    # 技术指标
    "TA-Lib>=0.6.0",
    "pandas-ta>=0.3.14b",
    "technical>=1.4.0",
    # 量化回测
    "backtrader>=1.9.78.123",
    "vectorbt>=0.28.0",
    "quantstats>=0.0.64",
    # AI 模型
    "openai>=1.3.0",
    "anthropic>=0.8.0",
    "dashscope>=1.14.0",
    # 机器学习
    "scikit-learn>=1.6.0,<2.0",
    # 缓存
    "cachetools>=7.1.0",
    # 定时任务
    "apscheduler>=3.10.0,<4.0",
    # HTTP 客户端（health check 等）
    "aiohttp>=3.9.0,<4.0",
    # Prometheus 监控指标
    "prometheus-client>=0.21.0,<1.0",
]

# Execution Service — 交易执行 + 风控
execution = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aio-pika>=9.5.0",
    "pydantic>=2.10.0",
    "pydantic_settings>=2.7.0",
    "httpx>=0.28.0",
    "prometheus-client>=0.21.0",
]

# AI Scheduler — 调度器 + 定时任务
ai-scheduler = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic_settings>=2.7.0",
    "prometheus-client>=0.21.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
]

# Monitoring — 监控选装（独立部署用）
monitoring = [
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    "python-json-logger>=3.2.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
]

# Shared utilities — 所有服务公共依赖
shared = [
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.31.0",
]

# Development — 本地开发 + CI
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.25.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.28.0",
    "coverage[toml]>=7.6.0",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
    "bandit[toml]>=1.8.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.32.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "tests*"]
exclude = ["k8s*", "data*", "helm*", "config*", "dashboard*", "monitoring*", "reports*", "scripts*", "docs*"]

[tool.ruff]
extend = "ruff.toml"

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = false
warn_redundant_casts = true
strict_equality = true
exclude = [
  "scripts/",
  "tests/",
  "k8s/",
  "monitoring/",
]
disable_error_code = [
  "call-arg",
  "no-any-return",
  "attr-defined",
  "arg-type",
  "operator",
  "return-value",
  "name-defined",
  "assignment",
  "var-annotated",
  "misc",
  "union-attr",
  "override",
  "call-overload",
  "unused-coroutine",
  "index",
  "has-type",
  "return",
  "dict-item",
]
# disallow_* = false 逐步推进，现阶段不阻塞 CI

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = [
    "strategy-service/tests",
    "execution-service/tests",
    "ai-scheduler/tests",
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--durations=10",
]

[tool.coverage.run]
source = [
    "strategy-service",
    "execution-service",
    "ai-scheduler",
]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
fail_under = 80  # strategy-service 87%, execution-service 87%
                  # report_scheduler (0%) / market_regime (15%) 仍有缺口
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B105", "B603"]
# B101: assert — used in tests
# B105: hardcoded password strings — handled by K8s Secrets
# B603: subprocess without shell — deploy.sh uses it safely

[tool.ruff.lint]
extend-ignore = [
    "S105",  # Possible hardcoded password — handled by K8s Secrets
]
